...
            android:background="@drawable/icon_back"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/content_description_back_button" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            tools:background="@drawable/icon_like_on"
            android:contentDescription="@string/content_description_favorite_button" />
...
